// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  />
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-9lnksi-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-9lnksi-StyledTabButton:hover,
.cache-9lnksi-StyledTabButton:active,
.cache-9lnksi-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-9lnksi-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-9lnksi-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-9lnksi-StyledTabButton[aria-disabled='true'],
.cache-9lnksi-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="2"
      aria-selected="true"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="true"
      disabled=""
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs menu selected 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-9lnksi-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-9lnksi-StyledTabButton:hover,
.cache-9lnksi-StyledTabButton:active,
.cache-9lnksi-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-9lnksi-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-9lnksi-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-9lnksi-StyledTabButton[aria-disabled='true'],
.cache-9lnksi-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1p55ii1-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1p55ii1-StyledTabButton-StyledMenu:hover,
.cache-1p55ii1-StyledTabButton-StyledMenu:active,
.cache-1p55ii1-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1p55ii1-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1p55ii1-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1p55ii1-StyledTabButton-StyledMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-qd0yov-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="cache-1p55ii1-StyledTabButton-StyledMenu edb1sh90"
      role="tab"
      type="button"
    >
      More
      <svg
        class="edb1sh91 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
    <button
      aria-controls="id-d9i348"
      aria-disabled="true"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="cache-1p55ii1-StyledTabButton-StyledMenu edb1sh90"
      disabled=""
      role="tab"
      type="button"
    >
      More again
      <svg
        class="edb1sh91 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
  </div>
  .cache-co8i76-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 24px 6px #d9dadd66;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-1xezjbx-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #3f4250;
  background: none;
}

.cache-1xezjbx-StyledItem-StyledMenuItem svg {
  fill: #3f4250;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus {
  color: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover svg,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus svg {
  fill: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #641cb3;
}

.cache-1m6x1vf-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-1m6x1vf-StyledItem-StyledMenuItem svg {
  fill: #b5b7bd;
}

.cache-1m6x1vf-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #641cb3;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-co8i76-StyledPopover e1hqs9p51"
      data-dialog="true"
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom e1hqs9p50"
        role="menu"
      >
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
        <button
          class="eeet93f0 cache-1m6x1vf-StyledItem-StyledMenuItem e10f690h1"
          disabled=""
          role="menuitem"
          type="button"
        >
          Test
        </button>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
      </div>
    </div>
  </div>
  .cache-co8i76-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 24px 6px #d9dadd66;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-co8i76-StyledPopover e1hqs9p51"
      data-dialog="true"
      hidden=""
      id="id-d9i348"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-9lnksi-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-9lnksi-StyledTabButton:hover,
.cache-9lnksi-StyledTabButton:active,
.cache-9lnksi-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-9lnksi-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-9lnksi-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-9lnksi-StyledTabButton[aria-disabled='true'],
.cache-9lnksi-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-label="first"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="second"
      aria-selected="true"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="true"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="three"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      disabled=""
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-9lnksi-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-9lnksi-StyledTabButton:hover,
.cache-9lnksi-StyledTabButton:active,
.cache-9lnksi-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-9lnksi-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-9lnksi-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-9lnksi-StyledTabButton[aria-disabled='true'],
.cache-9lnksi-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-60k51q-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-vwnmew-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1p55ii1-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1p55ii1-StyledTabButton-StyledMenu:hover,
.cache-1p55ii1-StyledTabButton-StyledMenu:active,
.cache-1p55ii1-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1p55ii1-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1p55ii1-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1p55ii1-StyledTabButton-StyledMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-qd0yov-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  top: 0;
  bottom: 0;
  background: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu:hover,
.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu:active,
.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu:focus-visible {
  outline: auto;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover,
.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus,
.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='true'],
.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="true"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="true"
      role="tab"
      type="button"
    >
      First
      <span
        class="e1hzf7cr3 ej33bna0 cache-60k51q-StyledText-StyledSpan-StyledBadge e13y3mga0"
      >
        2
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Undefined
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Counter
      <span
        class="e1hzf7cr3 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
      >
        12
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Counter no items
      <span
        class="e1hzf7cr3 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
      >
        0
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Conter and badge
      <span
        class="e1hzf7cr3 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
      >
        12
      </span>
      <span
        class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Badge
      <span
        class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="cache-1p55ii1-StyledTabButton-StyledMenu edb1sh90"
      role="tab"
      type="button"
    >
      Blabla
      <svg
        class="edb1sh91 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
    <button
      aria-controls="id-d9i348"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="ewug27g1 cache-bwyp9t-StyledTabButton-StyledMenu-StyledTabMenu edb1sh90"
      role="tab"
      style="box-shadow: none;"
      type="button"
    >
      More
      <svg
        class="edb1sh91 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
  </div>
  .cache-co8i76-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 24px 6px #d9dadd66;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-co8i76-StyledPopover e1hqs9p51"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%; display: none;"
      tabindex="-1"
    />
  </div>
  .cache-co8i76-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 24px 6px #d9dadd66;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-vlz0oa-MenuContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-vlz0oa-MenuContainer .e1hzf7cr0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 8px 16px;
  border-bottom-width: 1px;
  width: 100%;
  cursor: pointer;
  min-width: 110px;
  background-color: transparent;
}

.cache-9lnksi-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-9lnksi-StyledTabButton:hover,
.cache-9lnksi-StyledTabButton:active,
.cache-9lnksi-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-9lnksi-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-9lnksi-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-9lnksi-StyledTabButton[aria-disabled='true'],
.cache-9lnksi-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-60k51q-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-vwnmew-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1p55ii1-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1p55ii1-StyledTabButton-StyledMenu:hover,
.cache-1p55ii1-StyledTabButton-StyledMenu:active,
.cache-1p55ii1-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1p55ii1-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1p55ii1-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1p55ii1-StyledTabButton-StyledMenu .edb1sh91 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1p55ii1-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh91 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-qd0yov-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-co8i76-StyledPopover e1hqs9p51"
      data-dialog="true"
      id="id-d9i348"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1k95x5n-MenuList-centerStyles-bottomStyles-bottom e1hqs9p50"
        role="menu"
      >
        <div
          class="cache-vlz0oa-MenuContainer ewug27g2"
        >
          <button
            aria-disabled="false"
            aria-selected="true"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="true"
            role="tab"
            type="button"
          >
            First
            <span
              class="e1hzf7cr3 ej33bna0 cache-60k51q-StyledText-StyledSpan-StyledBadge e13y3mga0"
            >
              2
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="1"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Second
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Undefined
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Counter
            <span
              class="e1hzf7cr3 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
            >
              12
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="2"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Counter no items
            <span
              class="e1hzf7cr3 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
            >
              0
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Conter and badge
            <span
              class="e1hzf7cr3 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
            >
              12
            </span>
            <span
              class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
            >
              Badge
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Badge
            <span
              class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
            >
              Badge
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-9lnksi-StyledTabButton e1hzf7cr0"
            data-is-selected="false"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-controls="test"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cache-1p55ii1-StyledTabButton-StyledMenu edb1sh90"
            role="tab"
            type="button"
          >
            Blabla
            <svg
              class="edb1sh91 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="__reakit-portal"
    >
      <div
        aria-label="Menu"
        class="cache-co8i76-StyledPopover e1hqs9p51"
        data-dialog="true"
        hidden=""
        id="test"
        role="dialog"
        style="position: fixed; left: 100%; top: 100%; display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-9lnksi-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-9lnksi-StyledTabButton:hover,
.cache-9lnksi-StyledTabButton:active,
.cache-9lnksi-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-9lnksi-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-9lnksi-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-9lnksi-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-9lnksi-StyledTabButton[aria-disabled='true'],
.cache-9lnksi-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-ov586y-StyledLink-StyledTabButton {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-ov586y-StyledLink-StyledTabButton .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-ov586y-StyledLink-StyledTabButton>* {
  pointer-events: none;
}

.cache-ov586y-StyledLink-StyledTabButton:hover,
.cache-ov586y-StyledLink-StyledTabButton:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #005da3;
  text-decoration-color: #005da3;
}

.cache-ov586y-StyledLink-StyledTabButton:hover .e1afnb7a2,
.cache-ov586y-StyledLink-StyledTabButton:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-ov586y-StyledLink-StyledTabButton:hover::after,
.cache-ov586y-StyledLink-StyledTabButton:focus::after {
  background-color: #005da3;
}

.cache-ov586y-StyledLink-StyledTabButton:active {
  text-decoration-thickness: 2px;
}

.cache-ov586y-StyledLink-StyledTabButton:hover,
.cache-ov586y-StyledLink-StyledTabButton:active,
.cache-ov586y-StyledLink-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-ov586y-StyledLink-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-ov586y-StyledLink-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-ov586y-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-ov586y-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-ov586y-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-ov586y-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-ov586y-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-ov586y-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-ov586y-StyledLink-StyledTabButton[aria-disabled='true'],
.cache-ov586y-StyledLink-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <div
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
    >
      First
    </div>
    <a
      aria-disabled="false"
      aria-selected="false"
      class="cache-9lnksi-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
    >
      Second
    </a>
    <a
      class="e1hzf7cr0 cache-ov586y-StyledLink-StyledTabButton e1afnb7a0"
      href="#"
    >
      Very long tab name
    </a>
  </div>
</DocumentFragment>
`;
